--- a/v2/guide/team.html
+++ b/v2/guide/team.html
@@ -147,9 +147,9 @@
   <a class="nav-link">Soutien</a><span class="arrow"></span>
   <ul class="nav-dropdown">
     <li><ul>
+      <li><a href="/support-vuejs/#One-time-Donations" class="nav-link">Don ponctuel</a></li>
+      <li><a href="/support-vuejs/#Recurring-Pledges" target="_blank" class="nav-link">Soutien récurrent</a></li>
       <li><a href="https://vue.threadless.com" target="_blank" class="nav-link">La boutique</a></li>
-      <li><a href="https://opencollective.com/vuejs" target="_blank" class="nav-link">Soutien de l'équipe sur OpenCollective</a></li>
-      <li><a href="https://www.patreon.com/evanyou" target="_blank" class="nav-link">Soutien d'Evan You sur Patreon</a></li>
     </ul></li>
   </ul>
 </li>
@@ -240,9 +240,9 @@
   <a class="nav-link">Soutien</a><span class="arrow"></span>
   <ul class="nav-dropdown">
     <li><ul>
+      <li><a href="/support-vuejs/#One-time-Donations" class="nav-link">Don ponctuel</a></li>
+      <li><a href="/support-vuejs/#Recurring-Pledges" target="_blank" class="nav-link">Soutien récurrent</a></li>
       <li><a href="https://vue.threadless.com" target="_blank" class="nav-link">La boutique</a></li>
-      <li><a href="https://opencollective.com/vuejs" target="_blank" class="nav-link">Soutien de l'équipe sur OpenCollective</a></li>
-      <li><a href="https://www.patreon.com/evanyou" target="_blank" class="nav-link">Soutien d'Evan You sur Patreon</a></li>
     </ul></li>
   </ul>
 </li>
@@ -1181,7 +1181,7 @@
         'vuejs.org', 'jp.vuejs.org'
       ],
       reposPersonal: [
-        'vue-i18n', 'vue-i18n-loader', 'vue-validator'
+        'vue-i18n', 'vue-i18n-loader', 'vue-i18n-extensions'
       ],
       links: [
         'https://cuusoo.com', 'http://frapwings.jp'
