--- a/index.html
+++ b/index.html
@@ -287,10 +287,16 @@
 </div>
 
 <div id="special-sponsor">
+  <h3>Sponsors spéciaux</h3>
+  <br>
   <a href="https://stdlib.com/" target="_blank">
-    <span>Soutenu par</span>
-    <img src="/images/stdlib.png">
+    <img src="/images/stdlib.png" style="width:140px">
     <span>Fonction en tant que plateforme de service et bibliothèque</span>
+  </a>
+  <br>
+  <a href="https://www.bitsrc.io/?utm_source=vue&utm_medium=vue&utm_campaign=vue&utm_term=vue&utm_content=vue" target="_blank">
+    <img src="/images/bit.png" style="width:60px;height:60px">
+    <span>La manière la plus rapide de partager du code</span>
   </a>
 </div>
 
@@ -358,6 +364,12 @@
 </a>
 <a href="https://neds.com.au/" target="_blank" style="width: 120px;">
   <img src="/images/neds.png" style="width: 120px;">
+</a>
+<a href="https://hackr.io/tutorials/learn-vue-js" target="_blank" style="width: 120px;">
+  <img src="/images/hackr-io.png" style="width: 120px;">
+</a>
+<a href="https://icons8.com/" target="_blank" style="width: 120px;">
+  <img src="/images/icons8.png" style="width: 120px;">
 </a>
 <a href="https://vuejobs.com/?ref=vuejs" target="_blank" style="width: 120px;">
   <img src="/images/vuejobs.png" style="width: 120px;">
