--- a/support-vuejs/index.html
+++ b/support-vuejs/index.html
@@ -344,12 +344,20 @@ Les soutiens récurants viennent avec des avantages exclusifs comme avoir son no
 
 <h2>Les sponsors premiums actuels :</h2>
 
-<h3>Platine</h3>
+<h3>Sponsors spéciaux</h3>
 
 <p class="platinum">
   <a href="https://stdlib.com" target="_blank">
     <img src="/images/stdlib.png">
   </a>
+  <a href="https://www.bitsrc.io/?utm_source=vue&utm_medium=vue&utm_campaign=vue&utm_term=vue&utm_content=vue" target="_blank">
+    <img src="/images/bit.png" style="width:120px;height:120px;">
+  </a>
+</p>
+
+<h3>Platine</h3>
+
+<p class="platinum">
   <a href="http://tooltwist.com/" target="_blank">
     <img src="/images/tooltwist.png">
   </a>
@@ -404,6 +412,12 @@ Les soutiens récurants viennent avec des avantages exclusifs comme avoir son no
   </a>
   <a href="https://neds.com.au/" target="_blank">
     <img src="/images/neds.png">
+  </a>
+  <a href="https://hackr.io/tutorials/learn-vue-js" target="_blank">
+    <img src="/images/hackr-io.png">
+  </a>
+  <a href="https://icons8.com/" target="_blank">
+    <img src="/images/icons8.png">
   </a>
   <a href="https://vuejobs.com/?ref=vuejs" target="_blank">
     <img src="/images/vuejobs.png">
