--- a/support-vuejs/index.html
+++ b/support-vuejs/index.html
@@ -395,9 +395,6 @@ Les soutiens récurants viennent avec des avantages exclusifs comme avoir son no
   <a href="https://chaitin.cn/en/" target="_blank">
     <img src="/images/chaitin.png">
   </a>
-  <a href="http://monterail.com/" target="_blank">
-    <img src="/images/monterail.png">
-  </a>
   <a href="https://anymod.com" target="_blank">
     <img src="/images/anymod.png">
   </a>
@@ -424,6 +421,12 @@ Les soutiens récurants viennent avec des avantages exclusifs comme avoir son no
   </a>
   <a href="https://leanpub.com/vuejs2" target="_blank">
     <img src="/images/tmvuejs2.png">
+  </a>
+  <a href="https://www.bmqb.com/jobs" target="_blank">
+    <img src="/images/bmqb.png">
+  </a>
+  <a href="https://codepilot.ai" target="_blank">
+    <img src="/images/codepilot.png">
   </a>
 </p>
 
