--- a/index.html
+++ b/index.html
@@ -347,9 +347,6 @@
 <a href="https://chaitin.cn/en/" target="_blank" style="width: 120px;">
   <img src="/images/chaitin.png" style="width: 120px;">
 </a>
-<a href="http://monterail.com/" target="_blank" style="width: 120px;">
-  <img src="/images/monterail.png" style="width: 120px;">
-</a>
 <a href="https://anymod.com" target="_blank" style="width: 120px;">
   <img src="/images/anymod.png" style="width: 120px;">
 </a>
@@ -376,6 +373,12 @@
 </a>
 <a href="https://leanpub.com/vuejs2" target="_blank" style="width: 120px;">
   <img src="/images/tmvuejs2.png" style="width: 120px;">
+</a>
+<a href="https://www.bmqb.com/jobs" target="_blank" style="width: 120px;">
+  <img src="/images/bmqb.png" style="width: 120px;">
+</a>
+<a href="https://codepilot.ai" target="_blank" style="width: 120px;">
+  <img src="/images/codepilot.png" style="width: 120px;">
 </a>
 <br>
 
