--- a/v2/style-guide/index.html
+++ b/v2/style-guide/index.html
@@ -98,6 +98,7 @@
       <li><a href="/v2/api/" class="nav-link">API</a></li>
       <li><a href="/v2/style-guide/" class="nav-link current">Conventions</a></li>
       <li><a href="/v2/examples/" class="nav-link">Exemples</a></li>
+      <li><a href="/v2/cookbook/" class="nav-link">Tutoriels</a></li>
     </ul></li>
   </ul>
 </li>
@@ -126,6 +127,7 @@
     </ul></li>
     <li><h4>Infos</h4></li>
     <li><ul>
+      <li><a href="https://news.vuejs.org" class="nav-link" target="_blank">Actualités (En)</a></li>
       <li><a href="https://github.com/vuejs/roadmap" class="nav-link" target="_blank">Plans futurs (En)</a></li>
       <li><a href="https://twitter.com/vuejs" class="nav-link" target="_blank">Twitter (En)</a></li>
       <li><a href="https://medium.com/the-vue-point" class="nav-link" target="_blank">Blog (En)</a></li>
@@ -191,6 +193,7 @@
       <li><a href="/v2/api/" class="nav-link">API</a></li>
       <li><a href="/v2/style-guide/" class="nav-link current">Conventions</a></li>
       <li><a href="/v2/examples/" class="nav-link">Exemples</a></li>
+      <li><a href="/v2/cookbook/" class="nav-link">Tutoriels</a></li>
     </ul></li>
   </ul>
 </li>
@@ -219,6 +222,7 @@
     </ul></li>
     <li><h4>Infos</h4></li>
     <li><ul>
+      <li><a href="https://news.vuejs.org" class="nav-link" target="_blank">Actualités (En)</a></li>
       <li><a href="https://github.com/vuejs/roadmap" class="nav-link" target="_blank">Plans futurs (En)</a></li>
       <li><a href="https://twitter.com/vuejs" class="nav-link" target="_blank">Twitter (En)</a></li>
       <li><a href="https://medium.com/the-vue-point" class="nav-link" target="_blank">Blog (En)</a></li>
@@ -263,9 +267,9 @@
 
     </ul>
     <div class="list">
-      <div id="sidebar-sponsors">
+      <div id="sidebar-sponsors-special">
   <div class="main-sponsor">
-    <span>Sponsors</span>
+    <span>Special Sponsors</span>
     <div>
     <a href="https://stdlib.com" target="_blank" class="logo">
       <img src="/images/stdlib.png">
@@ -273,6 +277,14 @@
     <a href="https://www.bitsrc.io/?utm_source=vue&utm_medium=vue&utm_campaign=vue&utm_term=vue&utm_content=vue" target="_blank" class="logo">
       <img src="/images/bit-wide.png">
     </a>
+    </div>
+  </div>
+</div>
+
+<div id="sidebar-sponsors-platinum">
+  <div class="main-sponsor">
+    <span>Patreon Sponsors</span>
+    <div>
     <a href="http://tooltwist.com/" target="_blank" class="logo">
       <img src="/images/tooltwist.png">
     </a>
@@ -295,7 +307,6 @@
         
       </h2>
       <ul class="menu-root">
-  
   
 </ul>
 
