--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
 <a href="https://vueschool.io/?utm_source=Vuejs.org&utm_medium=Banner&utm_campaign=Sponsored%20Banner&utm_content=V1" target="_blank" style="width: 160px;">
   <img src="/images/vueschool.png" style="width: 160px;">
 </a>
-<a href="https://www.datacamp.com/careers?utm_source=vuejs&utm_medium=sidebar" target="_blank" style="width: 160px;">
-  <img src="/images/datacamp.png" style="width: 160px;">
+<a href="https://vehikl.com/" target="_blank" style="width: 160px;">
+  <img src="/images/vehikl.png" style="width: 160px;">
 </a>
 <br>
 <br>
@@ -386,6 +386,15 @@
 </a>
 <a href="https://teamextension.io/" target="_blank" style="width: 120px;">
   <img src="/images/teamextension.png" style="width: 120px;">
+</a>
+<a href="https://jsguru.io/" target="_blank" style="width: 120px;">
+  <img src="/images/jsguru.png" style="width: 120px;">
+</a>
+<a href="http://aaha.co/" target="_blank" style="width: 120px;">
+  <img src="/images/aaha.png" style="width: 120px;">
+</a>
+<a href="https://www.valuecoders.com" target="_blank" style="width: 120px;">
+  <img src="/images/valuecoders.png" style="width: 120px;">
 </a>
 <br>
 
@@ -550,4 +559,5 @@ window.addEventListener('load', function () {
     }, false)
     </script>
   <script async>'use strict';'serviceWorker'in navigator&&navigator.serviceWorker.register('service-worker.js').then(function(a){a.onupdatefound=function(){var b=a.installing;b.onstatechange=function(){switch(b.state){case'installed':navigator.serviceWorker.controller?console.log('New or updated content is available.'):console.log('Content is now available offline!');break;case'redundant':console.error('The installing service worker became redundant.');}}}}).catch(function(a){console.error('Error during service worker registration:',a)});
+</script><script>'use strict';'serviceWorker'in navigator&&navigator.serviceWorker.register('service-worker.js').then(function(a){a.onupdatefound=function(){var b=a.installing;b.onstatechange=function(){switch(b.state){case'installed':navigator.serviceWorker.controller?console.log('New or updated content is available.'):console.log('Content is now available offline!');break;case'redundant':console.error('The installing service worker became redundant.');}}}}).catch(function(a){console.error('Error during service worker registration:',a)});
 </script></body></html>
