--- a/support-vuejs/index.html
+++ b/support-vuejs/index.html
@@ -368,8 +368,8 @@ Les soutiens récurrents viennent avec des avantages exclusifs comme avoir son n
   <a href="https://vueschool.io/?utm_source=Vuejs.org&utm_medium=Banner&utm_campaign=Sponsored%20Banner&utm_content=V1" target="_blank">
     <img src="/images/vueschool.png">
   </a>
-  <a href="https://www.datacamp.com/careers?utm_source=vuejs&utm_medium=sidebar" target="_blank">
-    <img src="/images/datacamp.png">
+  <a href="https://vehikl.com/" target="_blank">
+    <img src="/images/vehikl.png">
   </a>
 </p>
 
@@ -434,6 +434,15 @@ Les soutiens récurrents viennent avec des avantages exclusifs comme avoir son n
   </a>
   <a href="https://teamextension.io/" target="_blank">
     <img src="/images/teamextension.png">
+  </a>
+  <a href="https://jsguru.io/" target="_blank">
+    <img src="/images/jsguru.png">
+  </a>
+  <a href="http://aaha.co/" target="_blank">
+    <img src="/images/aaha.png">
+  </a>
+  <a href="https://www.valuecoders.com" target="_blank">
+    <img src="/images/valuecoders.png">
   </a>
 </p>
 
