--- a/v2/style-guide/index.html
+++ b/v2/style-guide/index.html
@@ -291,8 +291,8 @@
     <a href="https://vueschool.io/?utm_source=Vuejs.org&utm_medium=Banner&utm_campaign=Sponsored%20Banner&utm_content=V1" target="_blank" class="logo">
       <img src="/images/vueschool.png">
     </a>
-    <a href="https://www.datacamp.com/careers?utm_source=vuejs&utm_medium=sidebar" target="_blank" class="logo">
-      <img src="/images/datacamp.png">
+    <a href="https://vehikl.com/" target="_blank" class="logo">
+      <img src="/images/vehikl.png">
     </a>
     </div>
   </div>
@@ -538,7 +538,7 @@
 <ul>
 <li>des éléments HTML,</li>
 <li>d’autres composants préfixés par une base de nom et</li>
-<li>des composants d’interface utilisateur tiers</li>
+<li>des composants d’interface utilisateur tiers.</li>
 </ul>
 <p>Mais ils ne doivent <strong>jamais</strong> contenir un état global (par ex. depuis un store Vuex).</p>
 <p>Leurs noms incluent souvent le nom d’un des éléments qu’ils englobent (par ex. <code>BaseButton</code>, <code>BaseTable</code>), sauf quand aucun élément n’existe pour la tâche qu’ils accomplissent (par ex. <code>BaseIcon</code>). Si vous construisez des composants similaires pour un contexte plus spécifique, ils devront toujours utiliser ces composants (par ex. <code>BaseButton</code> pourrait être utilisé dans <code>ButtonSubmit</code>).</p>
