--- a/support-vuejs/index.html
+++ b/support-vuejs/index.html
@@ -426,9 +426,6 @@ Les soutiens récurrents viennent avec des avantages exclusifs comme avoir son n
   <a href="https://leanpub.com/vuejs2" target="_blank">
     <img src="/images/tmvuejs2.png">
   </a>
-  <a href="https://www.bmqb.com/jobs" target="_blank">
-    <img src="/images/bmqb.png">
-  </a>
   <a href="https://codepilot.ai" target="_blank">
     <img src="/images/codepilot.png">
   </a>
@@ -443,6 +440,12 @@ Les soutiens récurrents viennent avec des avantages exclusifs comme avoir son n
   </a>
   <a href="https://www.valuecoders.com" target="_blank">
     <img src="/images/valuecoders.png">
+  </a>
+  <a href="https://www.nsoft.com/careers/" target="_blank">
+    <img src="/images/nsoft.png">
+  </a>
+  <a href="https://www.pubnub.com/vue-js/" target="_blank">
+    <img src="/images/pubnub.png">
   </a>
 </p>
 
