--- a/index.html
+++ b/index.html
@@ -378,9 +378,6 @@
 <a href="https://leanpub.com/vuejs2" target="_blank" style="width: 120px;">
   <img src="/images/tmvuejs2.png" style="width: 120px;">
 </a>
-<a href="https://www.bmqb.com/jobs" target="_blank" style="width: 120px;">
-  <img src="/images/bmqb.png" style="width: 120px;">
-</a>
 <a href="https://codepilot.ai" target="_blank" style="width: 120px;">
   <img src="/images/codepilot.png" style="width: 120px;">
 </a>
@@ -395,6 +392,12 @@
 </a>
 <a href="https://www.valuecoders.com" target="_blank" style="width: 120px;">
   <img src="/images/valuecoders.png" style="width: 120px;">
+</a>
+<a href="https://www.nsoft.com/careers/" target="_blank" style="width: 120px;">
+  <img src="/images/nsoft.png" style="width: 120px;">
+</a>
+<a href="https://www.pubnub.com/vue-js/" target="_blank" style="width: 120px;">
+  <img src="/images/pubnub.png" style="width: 120px;">
 </a>
 <br>
 
@@ -558,6 +561,5 @@ window.addEventListener('load', function () {
       FastClick.attach(document.body)
     }, false)
     </script>
-  <script async>'use strict';'serviceWorker'in navigator&&navigator.serviceWorker.register('service-worker.js').then(function(a){a.onupdatefound=function(){var b=a.installing;b.onstatechange=function(){switch(b.state){case'installed':navigator.serviceWorker.controller?console.log('New or updated content is available.'):console.log('Content is now available offline!');break;case'redundant':console.error('The installing service worker became redundant.');}}}}).catch(function(a){console.error('Error during service worker registration:',a)});
-</script><script>'use strict';'serviceWorker'in navigator&&navigator.serviceWorker.register('service-worker.js').then(function(a){a.onupdatefound=function(){var b=a.installing;b.onstatechange=function(){switch(b.state){case'installed':navigator.serviceWorker.controller?console.log('New or updated content is available.'):console.log('Content is now available offline!');break;case'redundant':console.error('The installing service worker became redundant.');}}}}).catch(function(a){console.error('Error during service worker registration:',a)});
+  <script>'use strict';'serviceWorker'in navigator&&navigator.serviceWorker.register('service-worker.js').then(function(a){a.onupdatefound=function(){var b=a.installing;b.onstatechange=function(){switch(b.state){case'installed':navigator.serviceWorker.controller?console.log('New or updated content is available.'):console.log('Content is now available offline!');break;case'redundant':console.error('The installing service worker became redundant.');}}}}).catch(function(a){console.error('Error during service worker registration:',a)});
 </script></body></html>
