--- a/v2/guide/events.html
+++ b/v2/guide/events.html
@@ -1055,7 +1055,7 @@ new Vue({
 <p>Nouveau dans la 2.1.4+</p>
 </blockquote>
 <figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="comment">&lt;!-- l'évènement « click » sera déclenché au plus une fois --&gt;</span></span><br><span class="line"><span class="tag">&lt;<span class="name">a</span> <span class="attr">v-on:click.once</span>=<span class="string">"doThis"</span>&gt;</span><span class="tag">&lt;/<span class="name">a</span>&gt;</span></span><br></pre></td></tr></table></figure>
-<p>Au contraire des autres modificateurs, qui sont exclusifs aux évènements natifs du DOM, le modificateur <code>.once</code> peut également être utilisé pour les <a href="components.html">évènements des composants</a>. Si vous n’avez pas encore lu la section concernant les composants, ne vous en inquiétez pas pour le moment.</p>
+<p>Contrairement aux autres modificateurs, qui sont exclusifs aux évènements natifs du DOM, le modificateur <code>.once</code> peut également être utilisé pour les <a href="components.html">évènements des composants</a>. Si vous n’avez pas encore lu la section concernant les composants, ne vous en inquiétez pas pour le moment.</p>
 <blockquote>
 <p>Nouveau en 2.3.0+</p>
 </blockquote>
