--- a/v2/guide/transitions.html
+++ b/v2/guide/transitions.html
@@ -1491,7 +1491,7 @@ new Vue({
 <p>Alors, qu’en est-il lorsque nous avons une liste complète d’éléments où nous voulons faire un rendu simultané, par exemple avec <code>v-for</code> ? Dans ce cas, nous allons utiliser le composant <code>&lt;transition-group&gt;</code>. Cependant avant de plonger dans un exemple, il y a quelques éléments importants à connaitre sur ce composant :</p>
 <ul>
 <li>Contrairement à <code>&lt;transition&gt;</code>, il rend un élément réel : par défaut un <code>&lt;span&gt;</code>. Vous pouvez modifier l’élément rendu avec l’attribut <code>tag</code>.<ul>
-<li><a href="#Les-modes-de-transition">Les modes de transition</a> ne sont pas disponibles car nous ne pouvons plus alterner entre des éléments mutuellements exclusifs.</li>
+<li><a href="#Les-modes-de-transition">Les modes de transition</a> ne sont pas disponibles car nous ne pouvons plus alterner entre des éléments mutuellement exclusifs.</li>
 </ul>
 </li>
 <li>Les éléments à l’intérieur <strong>doivent toujours avoir</strong> un attribut <code>key</code> unique</li>
