--- a/support-vuejs/index.html
+++ b/support-vuejs/index.html
@@ -113,6 +113,7 @@
     <li><ul>
       <li><a href="https://forum.vuejs.org/c/french" class="nav-link" target="_blank">Forum</a></li>
       <li><a href="https://discordapp.com/channels/325477692906536972/360669119948783616" class="nav-link" target="_blank">Chat</a></li>
+      <li><a href="https://www.vuemeetups.org/" class="nav-link" target="_blank">Meetups (EN)</a></li>
     </ul></li>
     <li><h4>Outils</h4></li>
     <li>
@@ -207,6 +208,7 @@
     <li><ul>
       <li><a href="https://forum.vuejs.org/c/french" class="nav-link" target="_blank">Forum</a></li>
       <li><a href="https://discordapp.com/channels/325477692906536972/360669119948783616" class="nav-link" target="_blank">Chat</a></li>
+      <li><a href="https://www.vuemeetups.org/" class="nav-link" target="_blank">Meetups (EN)</a></li>
     </ul></li>
     <li><h4>Outils</h4></li>
     <li>
@@ -402,9 +404,6 @@ Les soutiens récurrents viennent avec des avantages exclusifs comme avoir son n
   <a href="https://chaitin.cn/en/" target="_blank">
     <img src="/images/chaitin.png">
   </a>
-  <a href="https://anymod.com" target="_blank">
-    <img src="/images/anymod.png">
-  </a>
   <a href="https://www.frontenddeveloperlove.com/" target="_blank">
     <img src="/images/frontend-love.png">
   </a>
@@ -426,17 +425,11 @@ Les soutiens récurrents viennent avec des avantages exclusifs comme avoir son n
   <a href="https://vuejobs.com/?ref=vuejs" target="_blank">
     <img src="/images/vuejobs.png">
   </a>
-  <a href="https://leanpub.com/vuejs2" target="_blank">
-    <img src="/images/tmvuejs2.png">
-  </a>
   <a href="https://codepilot.ai" target="_blank">
     <img src="/images/codepilot.png">
   </a>
   <a href="https://teamextension.io/" target="_blank">
     <img src="/images/teamextension.png">
-  </a>
-  <a href="https://jsguru.io/" target="_blank">
-    <img src="/images/jsguru.png">
   </a>
   <a href="http://aaha.co/" target="_blank">
     <img src="/images/aaha.png">
@@ -447,8 +440,8 @@ Les soutiens récurrents viennent avec des avantages exclusifs comme avoir son n
   <a href="https://www.nsoft.com/careers/" target="_blank">
     <img src="/images/nsoft.png">
   </a>
-  <a href="https://www.pubnub.com/vue-js/" target="_blank">
-    <img src="/images/pubnub.png">
+  <a href="https://www.vuemastery.com/" target="_blank">
+    <img src="/images/vuemastery.png">
   </a>
 </p>
 
