--- a/v2/guide/events.html
+++ b/v2/guide/events.html
@@ -113,6 +113,7 @@
     <li><ul>
       <li><a href="https://forum.vuejs.org/c/french" class="nav-link" target="_blank">Forum</a></li>
       <li><a href="https://discordapp.com/channels/325477692906536972/360669119948783616" class="nav-link" target="_blank">Chat</a></li>
+      <li><a href="https://www.vuemeetups.org/" class="nav-link" target="_blank">Meetups (EN)</a></li>
     </ul></li>
     <li><h4>Outils</h4></li>
     <li>
@@ -208,6 +209,7 @@
     <li><ul>
       <li><a href="https://forum.vuejs.org/c/french" class="nav-link" target="_blank">Forum</a></li>
       <li><a href="https://discordapp.com/channels/325477692906536972/360669119948783616" class="nav-link" target="_blank">Chat</a></li>
+      <li><a href="https://www.vuemeetups.org/" class="nav-link" target="_blank">Meetups (EN)</a></li>
     </ul></li>
     <li><h4>Outils</h4></li>
     <li>
@@ -1055,7 +1057,7 @@ new Vue({
 <p>Nouveau dans la 2.1.4+</p>
 </blockquote>
 <figure class="highlight html"><table><tr><td class="code"><pre><span class="line"><span class="comment">&lt;!-- l'évènement « click » sera déclenché au plus une fois --&gt;</span></span><br><span class="line"><span class="tag">&lt;<span class="name">a</span> <span class="attr">v-on:click.once</span>=<span class="string">"doThis"</span>&gt;</span><span class="tag">&lt;/<span class="name">a</span>&gt;</span></span><br></pre></td></tr></table></figure>
-<p>Contrairement aux autres modificateurs, qui sont exclusifs aux évènements natifs du DOM, le modificateur <code>.once</code> peut également être utilisé pour les <a href="components.html">évènements des composants</a>. Si vous n’avez pas encore lu la section concernant les composants, ne vous en inquiétez pas pour le moment.</p>
+<p>Contrairement aux autres modificateurs, qui sont exclusifs aux évènements natifs du DOM, le modificateur <code>.once</code> peut également être utilisé pour les <a href="components-custom-events.html">évènements des composants</a>. Si vous n’avez pas encore lu la section concernant les composants, ne vous en inquiétez pas pour le moment.</p>
 <blockquote>
 <p>Nouveau en 2.3.0+</p>
 </blockquote>
